--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "django (>=5.2.1,<6.0.0)",
     "djangorestframework (>=3.16.0,<4.0.0)",
     "django-filter (>=25.1,<26.0)",
-    "markdown (>=3.8,<4.0)"
+    "markdown (>=3.8,<4.0)",
+    "dj-rest-auth (>=7.0.1,<8.0.0)"
 ]
 
 
