--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "djangorestframework (>=3.16.0,<4.0.0)",
     "django-filter (>=25.1,<26.0)",
     "markdown (>=3.8,<4.0)",
-    "dj-rest-auth (>=7.0.1,<8.0.0)"
+    "dj-rest-auth (>=7.0.1,<8.0.0)",
+    "requests (>=2.32.3,<3.0.0)"
 ]
 
 
