--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "django-filter (>=25.1,<26.0)",
     "markdown (>=3.8,<4.0)",
     "dj-rest-auth (>=7.0.1,<8.0.0)",
-    "requests (>=2.32.3,<3.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "pillow (>=11.3.0,<12.0.0)"
 ]
 
 
