--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "markdown (>=3.8,<4.0)",
     "dj-rest-auth (>=7.0.1,<8.0.0)",
     "requests (>=2.32.3,<3.0.0)",
-    "pillow (>=11.3.0,<12.0.0)"
+    "pillow (>=11.3.0,<12.0.0)",
+    "factory-boy (>=3.3.3,<4.0.0)"
 ]
 
 
