--- a/church-calendar/package.json
+++ b/church-calendar/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.2.6",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@tanstack/react-query": "^5.87.4",
+    "@tanstack/query-async-storage-persister": "^5.89.0",
+    "@tanstack/query-persist-client-core": "^5.89.0",
+    "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query-persist-client": "^5.89.0",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
