--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "pillow (>=11.3.0,<12.0.0)",
     "factory-boy (>=3.3.3,<4.0.0)",
+    "django-cors-headers (==4.7.0)",
 ]
 
 
