--- a/church-calendar/package.json
+++ b/church-calendar/package.json
@@ -29,6 +29,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
+    "expo-navigation-bar": "^5.0.8",
     "expo-router": "~5.1.4",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~0.30.10",
@@ -41,6 +42,7 @@
     "react-native": "0.79.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-hyperlink": "^0.0.22",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
