--- a/church-calendar/package.json
+++ b/church-calendar/package.json
@@ -22,12 +22,13 @@
     "@tanstack/query-persist-client-core": "^5.89.0",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-persist-client": "^5.89.0",
-    "expo": "~53.0.20",
+    "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "^17.0.8",
     "expo-linking": "~7.1.7",
     "expo-navigation-bar": "^5.0.8",
     "expo-router": "~5.1.4",
@@ -37,6 +38,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "install": "^0.13.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
