--- a/church-calendar/package.json
+++ b/church-calendar/package.json
@@ -43,6 +43,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-hyperlink": "^0.0.22",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
