--- a/church-calendar/package.json
+++ b/church-calendar/package.json
@@ -37,6 +37,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
+    "expo-toast": "^1.0.3",
     "expo-web-browser": "~14.2.0",
     "install": "^0.13.0",
     "react": "19.0.0",
