--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pillow (>=11.3.0,<12.0.0)",
     "factory-boy (>=3.3.3,<4.0.0)",
     "django-cors-headers (==4.7.0)",
+    "python-decouple (==3.8)",
 ]
 
 
