--- a/church-calendar/package.json
+++ b/church-calendar/package.json
@@ -56,6 +56,7 @@
     "react-native-tab-view": "^4.2.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-native-wheel-color-picker": "^1.3.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
