--- a/church-calendar/package.json
+++ b/church-calendar/package.json
@@ -50,6 +50,7 @@
     "react-native-hyperlink": "^0.0.22",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.9.1",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
