--- a/church-calendar/package.json
+++ b/church-calendar/package.json
@@ -32,6 +32,7 @@
     "expo-image-picker": "^17.0.8",
     "expo-linking": "~7.1.7",
     "expo-navigation-bar": "^5.0.8",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.4",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~0.30.10",
