feat: using production api endpoint in builds

--- a/church-calendar/app.json
+++ b/church-calendar/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "church-calendar",
+    "name": "Calendario La Resurrección",
     "slug": "church-calendar",
     "version": "1.0.0",
     "orientation": "portrait",
