--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "factory-boy (>=3.3.3,<4.0.0)",
     "django-cors-headers (==4.7.0)",
     "python-decouple (==3.8)",
+    "django-allauth (==65.9.0)",
 ]
 
 
