--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -99,6 +99,8 @@ charset-normalizer==3.4.2 ; python_version >= "3.13" \
     --hash=sha256:fdb20a30fe1175ecabed17cbf7812f7b804b8a315a25f24678bcdf120a90077f
 dj-rest-auth==7.0.1 ; python_version >= "3.13" \
     --hash=sha256:3f8c744cbcf05355ff4bcbef0c8a63645da38e29a0fdef3c3332d4aced52fb90
+django-allauth==65.9.0 ; python_version >= "3.13" \
+    --hash=sha256:a06bca9974df44321e94c33bcf770bb6f924d1a44b57defbce4d7ec54a55483e
 django-cors-headers==4.7.0 ; python_version >= "3.13" \
     --hash=sha256:6fdf31bf9c6d6448ba09ef57157db2268d515d94fc5c89a0a1028e1fc03ee52b \
     --hash=sha256:f1c125dcd58479fe7a67fe2499c16ee38b81b397463cf025f0e2c42937421070
