--- a/church-calendar/app.json
+++ b/church-calendar/app.json
@@ -17,7 +17,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.lazaroah02.churchcalendar"
+      "package": "com.lazaroah02.churchcalendar",
+      "googleServicesFile": "./path/to/google-services.json"
     },
     "splash": {
       "image": "./assets/images/splash.png",
