--- a/church-calendar/app.json
+++ b/church-calendar/app.json
@@ -18,7 +18,7 @@
       },
       "edgeToEdgeEnabled": true,
       "package": "com.lazaroah02.churchcalendar",
-      "googleServicesFile": "./path/to/google-services.json"
+      "googleServicesFile": "./google-services.json"
     },
     "splash": {
       "image": "./assets/images/splash.png",
