feat: fixing problem with calendar events grouping causing some events showing in wrong day

--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "django-cors-headers (==4.7.0)",
     "python-decouple (==3.8)",
     "django-allauth (==65.9.0)",
+    "pytz (>=2025.2,<2026.0)",
 ]
 
 
