feat: recovering original app.json file

--- a/church-calendar/app.json
+++ b/church-calendar/app.json
@@ -49,9 +49,9 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "3915cf59-532f-49fa-9ce9-a4f44596fd0f"
+        "projectId": "73dda39a-4f80-494a-b4ee-cb447821f509"
       }
     },
-    "owner": "lazaroaltedill"
+    "owner": "lazaroah02"
   }
 }
