--- a/church-calendar/package.json
+++ b/church-calendar/package.json
@@ -22,11 +22,11 @@
     "@tanstack/query-persist-client-core": "^5.89.0",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-persist-client": "^5.89.0",
-    "expo": "~53.0.24",
+    "expo": "~53.0.25",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "^5.2.4",
-    "expo-device": "^8.0.9",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.1",
@@ -35,7 +35,7 @@
     "expo-linking": "~7.1.7",
     "expo-navigation-bar": "^4.2.8",
     "expo-notifications": "~0.31.4",
-    "expo-router": "~5.1.7",
+    "expo-router": "~5.1.10",
     "expo-secure-store": "^14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
