feat: removing edge to edge to customize navigation bar color on some screens, evoiding showing active days from another monsth when not within the interval on calendar, evoiding using black color on groups creation

--- a/church-calendar/app.json
+++ b/church-calendar/app.json
@@ -16,7 +16,9 @@
         "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true,
+      "androidNavigationBar": {
+        "backgroundColor": "#6a7073ff"
+      },
       "package": "com.lazaroaltedill.churchcalendar",
       "googleServicesFile": "./google-services.json"
     },
