--- a/church-calendar/package.json
+++ b/church-calendar/package.json
@@ -15,6 +15,7 @@
     "@gorhom/bottom-sheet": "^5.2.6",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -24,6 +25,7 @@
     "@tanstack/react-query-persist-client": "^5.89.0",
     "expo": "~53.0.25",
     "expo-blur": "~14.1.5",
+    "expo-clipboard": "^8.0.8",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "^5.2.4",
     "expo-device": "~7.1.4",
