--- a/church-calendar/package.json
+++ b/church-calendar/package.json
@@ -71,7 +71,8 @@
     "@types/styled-components-react-native": "^5.2.5",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.52.0"
   },
   "private": true
 }
