--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -1,6 +1,10 @@
+anyio==4.12.1 ; python_version >= "3.13"
 asgiref==3.8.1 ; python_version >= "3.13"
+cachecontrol==0.14.4 ; python_version >= "3.13"
 certifi==2025.4.26 ; python_version >= "3.13"
+cffi==2.0.0 ; python_version >= "3.13" and platform_python_implementation != "PyPy"
 charset-normalizer==3.4.2 ; python_version >= "3.13"
+cryptography==46.0.3 ; python_version >= "3.13"
 dj-rest-auth==7.0.1 ; python_version >= "3.13"
 django-allauth==65.9.0 ; python_version >= "3.13"
 django-cors-headers==4.7.0 ; python_version >= "3.13"
@@ -9,12 +13,39 @@ django==5.2.1 ; python_version >= "3.13"
 djangorestframework==3.16.0 ; python_version >= "3.13"
 factory-boy==3.3.3 ; python_version >= "3.13"
 faker==37.6.0 ; python_version >= "3.13"
+firebase-admin==7.1.0 ; python_version >= "3.13"
+google-api-core==2.29.0 ; python_version >= "3.13"
+google-auth==2.47.0 ; python_version >= "3.13"
+google-cloud-core==2.5.0 ; python_version >= "3.13"
+google-cloud-firestore==2.22.0 ; python_version >= "3.13" and platform_python_implementation != "PyPy"
+google-cloud-storage==3.7.0 ; python_version >= "3.13"
+google-crc32c==1.8.0 ; python_version >= "3.13"
+google-resumable-media==2.8.0 ; python_version >= "3.13"
+googleapis-common-protos==1.72.0 ; python_version >= "3.13"
+grpcio-status==1.76.0 ; python_version >= "3.13" and platform_python_implementation != "PyPy"
+grpcio==1.76.0 ; python_version >= "3.13" and platform_python_implementation != "PyPy"
+h11==0.16.0 ; python_version >= "3.13"
+h2==4.3.0 ; python_version >= "3.13"
+hpack==4.1.0 ; python_version >= "3.13"
+httpcore==1.0.9 ; python_version >= "3.13"
+httpx==0.28.1 ; python_version >= "3.13"
+hyperframe==6.1.0 ; python_version >= "3.13"
 idna==3.10 ; python_version >= "3.13"
 markdown==3.8 ; python_version >= "3.13"
+msgpack==1.1.2 ; python_version >= "3.13"
 pillow==11.3.0 ; python_version >= "3.13"
+proto-plus==1.27.0 ; python_version >= "3.13"
+protobuf==6.33.4 ; python_version >= "3.13"
+pyasn1-modules==0.4.2 ; python_version >= "3.13"
+pyasn1==0.6.1 ; python_version >= "3.13"
+pycparser==2.23 ; platform_python_implementation != "PyPy" and implementation_name != "PyPy" and python_version >= "3.13"
+pyjwt==2.10.1 ; python_version >= "3.13"
 python-decouple==3.8 ; python_version >= "3.13"
 pytz==2025.2 ; python_version >= "3.13"
 requests==2.32.3 ; python_version >= "3.13"
+rsa==4.2 ; python_version >= "3.14"
+rsa==4.9.1 ; python_version == "3.13"
 sqlparse==0.5.3 ; python_version >= "3.13"
+typing-extensions==4.15.0 ; python_version >= "3.13" and platform_python_implementation != "PyPy"
 tzdata==2025.2 ; python_version >= "3.13"
 urllib3==2.4.0 ; python_version >= "3.13"
